test/functions/varargs/typeToVarArgs2.good
typeToVarArgs2.chpl:8: error: unresolved call 'foo("int", type real(64))'
typeToVarArgs2.chpl:1: note: this candidate did not match: foo(x ...)
typeToVarArgs2.chpl:8: note: because actual argument #2 is a type
typeToVarArgs2.chpl:1: note: but is passed to non-type varargs formal 'x'
