test/functions/varargs/typeToVarArgs2.chpl
proc foo(x...) {
}

proc bar(type x...) {
}

bar(int, real);
foo("int", real);
